# ResoPrism

./: .env.example  .gitignore  README.md  ai_summarizer.py  api.py  cache.py  data_pipeline.py  fetch_and_store_news.py  ingest_grants.py  ingest_news.py  ingest_papers.py  keyword_extraction.py  keyword_extractor.py  main.py  mindmap_generator.py  models.py  orchestrator.py  pyproject.toml  ranking.py  research_retriever.py  retrieve_data.py  run_orchestrator.py  run_server.sh  search_full_db.py  search_news.py  test_all_agents.py  test_grants.py  test_query.py  test_url_research.py  test_with_env.py  unified_query.py  url_research_service.py  verify_mongo_connection.py  web_scraper.py
agents/: __init__.py  grants_agent.py  news_agent.py  papers_agent.py
mongoresearchweb/: package-lock.json  package.json
mongoresearchweb/src/app/: globals.css  layout.tsx  page.tsx
mongoresearchweb/src/app/demo/: page.tsx
mongoresearchweb/src/components/: ErrorAlert.tsx  GrantCard.tsx  LoadingSkeleton.tsx  MindMap.tsx  NewsCard.tsx  PaperCard.tsx  ResearchCard.tsx  ResearchCarousel.tsx
mongoresearchweb/src/components/backgrounds/: AnimatedBackground.tsx  Prism.tsx
mongoresearchweb/src/components/cards/: AnimatedFeatureCard.tsx
mongoresearchweb/src/components/hero/: AnimatedHero.tsx
mongoresearchweb/src/components/sections/: CTASection.tsx  FeatureShowcase.tsx  Footer.tsx
mongoresearchweb/src/lib/: api.ts  labProfile.ts
mongoresearchweb/src/types/: research.ts
tests/: __init__.py  fixtures.py  test_orchestrator.py  test_ranking.py
web/: package-lock.json  package.json
web/src/app/: layout.tsx  page.tsx
web/src/app/demo/: page.tsx
web/src/components/: GradientText.tsx  MindMap.tsx
web/src/components/animations/: ScrollReveal.tsx  TextGenerateEffect.tsx
web/src/components/hero/: AnimatedHero.tsx
web/src/components/sections/: CTASection.tsx  Footer.tsx  HowItWorksSection.tsx
web/src/components/ui/: separator.tsx
web/src/lib/: api.ts
